# ai-monitor

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  settings.yaml.example
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: design-reviewer.md  functional-requirements-analyzer.md  library-finder.md  library-researcher.md  nonfunctional-requirements-analyzer.md  related-issue-finder.md  related-pr-finder.md
.claude/agents/old/: code-scanner.md  issue-creator.md  issue-reviewer.md  pr-implementer.md  pr-merger.md  pr-plan-reviewer.md  pr-planner.md  pr-reviewer.md  pr-test-creator.md
.claude/hooks/pre-tool-use/: pre-merge-check.py
.claude/hooks/session-start/: auto-pull.sh
.claude/skills/epic-issue-triage/: SKILL.md
.claude/skills/intake-issue-triage/: SKILL.md
.claude/skills/story-issue-triage/: SKILL.md
docs/: _config.yml  index.md
docs/assets/: app.js  style.css
docs/mock/: index.md
docs/mock/components/: index.md
docs/mock/issues/: index.md
docs/mock/pages/: index.md
docs/wiki/: README.md
docs/wiki/Claude ハーネス/: エージェント参照ドキュメント対応表.md
docs/wiki/Claudeハーネス/: README.md
docs/wiki/エージェント/: README.md
docs/wiki/チェックシート/: README.md
docs/wiki/テンプレート/: ER図.md  README.md  README書式.md  シナリオ.md  スキル.md  チェックシート.md  テストフィクスチャ.md  テスト実行方法.md  テンプレート.md  データフロー.md  モジュール構成.md  判定フローチャート.md  外部API.md  外部API一覧.md  外部ライブラリ.md  外部ライブラリ一覧.md  定数.md  対応表.md  状態遷移.md  画面構成.md  結合.md  (+1 more)
mcp/: server.py
plugins/ai-monitor/: .mcp.json  constants.env
scripts/: constants.sh
scripts/gh/: comment_formatter.py  github_ops.py  models.py  utils.py
src/ai_monitor/: __main__.py  main.py
tests/: conftest.py
tests/e2e/: conftest.py
(+244 files in other folders)
