[project]
name = "ai-monitor"
version = "0.1.0"
description = "GitHub-driven multi-project AI orchestrator: watch repos, spawn persistent tmux Claude Code sessions per (project, issue/pr, monitor), coordinate via MCP over HTTP."
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "mcp>=1.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.1",
    "mypy>=1.13",
    "ruff>=0.7",
]

[project.scripts]
ai-monitor = "ai_monitor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_monitor"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config", "-W", "error"]
markers = [
    "smoke: real external-service tests (requires --run-smoke)",
]
